--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -4,106 +4,125 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00bfa2"
     android:orientation="vertical"
     tools:context=".MainActivityFragment"
-    android:background="@color/primaryColor"
-    android:elevation="10dp">
+    >
 
     <TextView
         android:id="@+id/textViewDetail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_gravity="right"
-        android:layout_weight="1"
-        android:gravity="bottom|right"
-        android:textSize="50sp"
-        android:textColor="#282828"
-        android:inputType="textNoSuggestions|text"
-        android:maxLines="1"
-        android:lines="1"
-        android:singleLine="true"
-        android:hapticFeedbackEnabled="false"
-        android:textIsSelectable="false"
-        android:textColorHighlight="@android:color/transparent"
-        android:textColorLink="@android:color/transparent"
-        android:textAllCaps="false"
-        android:textStyle="normal"
-        android:selectAllOnFocus="false"
+        android:layout_weight="1.5"
+        android:background="@color/textviewBackground"
+        android:ellipsize="none"
+        android:enabled="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:gravity="center_vertical|right"
         android:hint="0"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"/>
+
+        android:linksClickable="false"
+        android:paddingRight="20dp"
+        android:scrollHorizontally="true"
+        android:selectAllOnFocus="true"
+
+        android:singleLine="true"
+        android:textAllCaps="false"
+        android:textColor="#282828"
+        android:textIsSelectable="false"
+        android:textSize="50sp"
+        android:textStyle="normal"
+        android:visibility="visible"/>
 
     <TextView
+        android:id="@+id/textViewResult"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/textViewResult"
-            android:layout_weight="1"
-            android:gravity="bottom|right"
-            android:textSize="30sp"
-            android:textColor="#f2a4a4a4"
+        android:layout_weight="0.5"
+        android:background="@color/textviewBackground"
+        android:ellipsize="none"
+        android:enabled="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:gravity="center_vertical|right"
+        android:hint="0"
+
             android:linksClickable="false"
-            android:inputType="text"
-            android:lines="1"
-            android:maxLines="1"
+        android:paddingRight="20dp"
+        android:scrollHorizontally="true"
+        android:selectAllOnFocus="true"
+
             android:singleLine="true"
-            android:hint="0"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"/>
+        android:text="0"
+        android:textAllCaps="false"
+        android:textColor="#f2a4a4a4"
+        android:textIsSelectable="false"
+        android:textSize="30sp"
+        android:textStyle="normal"
+        android:visibility="visible"/>
 
     <LinearLayout
-            android:orientation="horizontal"
+        android:id="@+id/orangeBox2"
+        style="@style/topButtons"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/orangeBox2"
+        android:layout_marginBottom="15dp"
             android:layout_weight="1"
-            >
+        android:clipToPadding="false"
+        android:elevation="5dp"
+        android:fadeScrollbars="false"
+        android:orientation="horizontal">
 
             <Button
-                android:layout_width="80dp"
-                android:layout_height="80dp"
                 android:id="@+id/buttonBracketOpen"
+                style="@style/topTheme"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:clickable="true"
+                android:elegantTextHeight="false"
+                android:enabled="true"
                 android:text="@string/bracketOpen"
-                android:elegantTextHeight="false"
                 android:textAllCaps="false"
-                android:clickable="true"
-                android:enabled="true"
-                style="@style/topTheme"
-                android:layout_marginLeft="8dp"/>
+                />
 
             <Button
-                android:layout_width="80dp"
-                android:layout_height="80dp"
                 android:id="@+id/buttonBracketClose"
-                android:text="@string/bracketClose"
+                style="@style/topTheme"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:clickable="true"
                 android:elegantTextHeight="false"
-                android:textAllCaps="false"
-                android:clickable="true"
                 android:enabled="true"
-                style="@style/topTheme"
-                android:layout_marginLeft="8dp"/>
+                android:text="@string/bracketClose"
+                android:textAllCaps="false"
+                />
 
             <Button
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:textAllCaps="false"
-                android:text="@string/root"
                 android:id="@+id/buttonRoot"
+                style="@style/topTheme"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:clickable="true"
                 android:enabled="true"
-                style="@style/topTheme"
-                android:layout_marginLeft="8dp"/>
+                android:text="@string/root"
+                android:textAllCaps="false"
+                />
 
             <Button
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:id="@+id/buttonFactorial"
-                android:textAllCaps="false"
-                android:text="@string/factorial"
+                android:id="@+id/buttonDel"
+                style="@style/topTheme"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:clickable="true"
                 android:enabled="true"
-                style="@style/topTheme"
-                android:layout_marginLeft="8dp"/>
+                android:text="@string/del"
+                android:textAllCaps="false"
+                />
 
         </LinearLayout>
 
