--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -19,18 +19,31 @@
 
     <style name="topTheme" parent="android:Widget.Material.Button.Borderless">
         <!-- Customize your theme here. -->
-        <item name="android:textColor">#353535</item>
+        <item name="android:textColor">@color/textColorUp</item>
         <item name="android:textSize">@dimen/fontSize</item>
         <item name="android:selectable">false</item>
         <item name="android:editable">false</item>
-        <item name="android:background">@drawable/roundbutton</item>
     </style>
 
     <style name="downTheme" parent="android:Widget.Material.Button.Borderless">
         <!-- Customize your theme here. -->
-        <item name="android:textColor">#353535</item>
-        <!--<item name="android:background">@android:color/transparent</item>-->
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/fontSize</item>
+        <item name="android:background">#fff</item>
+    </style>
+
+    <style name="downLeftButtons" parent="downTheme">
+        <item name="android:background">@drawable/ripple_left</item>
+        <item name="android:textColor">#707070</item>
+    </style>
+
+    <style name="downRightButtons" parent="downTheme">
+        <item name="android:background">@drawable/ripple_right</item>
+
+    </style>
+
+    <style name="topButtons" parent="topTheme">
+        <item name="android:background">@drawable/top_ripple</item>
     </style>
 
 
