--- a/app/src/iOSTheme/res/layout/activity_main.xml
+++ b/app/src/iOSTheme/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:id="@+id/topFragment"
-        class="tudor.com.supercalc.TopFragment"
+        class="tudor.com.calculatorSleek.TopFragment"
         android:layout_weight="3"
         tools:layout="@layout/fragment_top"
         />
