--- a/app/src/main/res/drawable/ripple_left.xml
+++ b/app/src/main/res/drawable/ripple_left.xml
@@ -1,10 +1,9 @@
-<ripple
+<shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#f3f3f3">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#fff"/>
-        </shape>
-    </item>
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="#a6a6a6"
+    android:shape="rectangle"
+    >
 
-</ripple>
+    <solid android:color="#fff"/>
+</shape>
