--- a/app/src/main/res/drawable/ripple_right.xml
+++ b/app/src/main/res/drawable/ripple_right.xml
@@ -1,7 +1,9 @@
-<ripple
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#ffff0000">
-    <item
-        android:id="@android:id/mask"
-        android:drawable="@android:color/white"/>
-</ripple>
+<shape
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:color="#626262"
+android:shape="rectangle"
+    >
+
+<solid android:color="#838383"/>
+</shape>
