--- a/app/src/main/res/drawable/top_ripple.xml
+++ b/app/src/main/res/drawable/top_ripple.xml
@@ -1,10 +1,9 @@
-<ripple
+<shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#a1a1a1">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#0289d1"/>
-        </shape>
-    </item>
-
-</ripple>
+    xmlns:tools="http://schemas.android.com/tools"
+    android:color="#a1a1a1"
+    android:shape="rectangle"
+    >
+    
+    <solid android:color="#0289d1"/>
+</shape>
