--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00bfa2"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    android:background="@color/backgroundColor"
     android:orientation="vertical">
     <fragment
         android:id="@+id/topFragment"
-        class="tudor.com.supercalc.TopFragment"
+        class="tudor.com.calculatorSleek.TopFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="top"
