--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00bfa2"
+    android:background="@color/backgroundColor"
     android:orientation="vertical"
     tools:context=".MainActivityFragment"
     >
-
     <TextView
         android:id="@+id/textViewDetail"
         android:layout_width="match_parent"
@@ -34,7 +33,7 @@
         android:textSize="50sp"
         android:textStyle="normal"
         android:visibility="visible"/>
-
+      />
     <TextView
         android:id="@+id/textViewResult"
             android:layout_width="match_parent"
