--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,10 +10,55 @@
         <item name="colorPrimaryDark">@color/primaryColorDark</item>
         <item name="colorAccent">@color/accentColor</item>
 
+        <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowContentOverlay">@null</item>
 
     </style>
+
+    <style name="topTheme" parent="Widget.AppCompat.ActionButton">
+        <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/textColorUp</item>
+        <item name="android:textSize">@dimen/fontSize</item>
+        <item name="android:selectable">false</item>
+        <item name="android:editable">false</item>
+    </style>
+
+    <style name="downTheme" parent="Widget.AppCompat.ActionButton">
+        <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/fontSize</item>
+        <item name="android:background">#fff</item>
+    </style>
+
+    <style name="downLeftButtons" parent="downTheme">
+        <item name="android:background">@drawable/ripple_left</item>
+        <item name="android:textColor">#707070</item>
+    </style>
+
+    <style name="downRightButtons" parent="downTheme">
+        <item name="android:background">@drawable/ripple_right</item>
+
+    </style>
+
+    <style name="topButtons" parent="topTheme">
+        <item name="android:background">@drawable/top_ripple</item>
+    </style>
+
+    <style name="LeBubbleTextView">
+        <item name="bubbleCornerRadius">@dimen/bubbleView_default_radius</item>
+        <item name="bubbleTextSize">@dimen/bubbleView_default_text_size</item>
+    </style>
+
+    <style name="LeBubbleTextView.Light">
+        <item name="bubbleBackgroundColor">@color/bubbleView_light_background</item>
+        <item name="bubbleTextColor">@color/bubbleView_light_text_color</item>
+    </style>
+
+    <dimen name="bubbleView_default_radius">10dp</dimen>
+    <dimen name="bubbleView_default_text_size">25dp</dimen>
+    <color name="bubbleView_light_background">#F5F5F5</color>
+    <color name="bubbleView_light_text_color">#424242</color>
 </resources>
