fixed adds and modified theme

--- a/app/src/main/res/drawable/top_ripple.xml
+++ b/app/src/main/res/drawable/top_ripple.xml
@@ -5,5 +5,5 @@
     android:shape="rectangle"
     >
     
-    <solid android:color="#0289d1"/>
+    <solid android:color="@color/primaryColorDark"/>
 </shape>
