--- a/app/src/main/res/drawable/ripple_right.xml
+++ b/app/src/main/res/drawable/ripple_right.xml
@@ -5,5 +5,5 @@ android:color="#626262"
 android:shape="rectangle"
     >
 
-<solid android:color="#838383"/>
+<solid android:color="@color/primaryColor"/>
 </shape>
