--- a/app/src/main/res/drawable-v21/ripple_right.xml
+++ b/app/src/main/res/drawable-v21/ripple_right.xml
@@ -1,9 +1,9 @@
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#626262">
+    android:color="#FF015785">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#838383"/>
+            <solid android:color="@color/primaryColor"/>
         </shape>
     </item>
 
