--- a/app/src/main/res/drawable-v21/top_ripple.xml
+++ b/app/src/main/res/drawable-v21/top_ripple.xml
@@ -1,9 +1,9 @@
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#a1a1a1">
+    android:color="#FF015785">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#0289d1"/>
+            <solid android:color="@color/primaryColorDark"/>
         </shape>
     </item>
 
