--- a/app/src/main/res/drawable/ripple_right.xml
+++ b/app/src/main/res/drawable/ripple_right.xml
@@ -1,7 +1,7 @@
 <shape
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
-android:color="#626262"
+android:color="#FF015785"
 android:shape="rectangle"
     >
 
