--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:background="@color/backgroundColor"
     android:orientation="vertical">
     <fragment
         android:id="@+id/topFragment"
-        class="tudor.com.calculatorSleek.TopFragment"
+        class="tudor.com.calculatorSleek.fragments.TopFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="top"
