--- a/app/src/main/res/layout/fragment_bottom.xml
+++ b/app/src/main/res/layout/fragment_bottom.xml
@@ -7,7 +7,7 @@
     android:layout_weight="5"
     android:focusableInTouchMode="false"
     android:orientation="vertical"
-    tools:context="tudor.com.calculatorSleek.BottomFragment"
+    tools:context=".fragments.BottomFragment"
     xmlns:ads="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
@@ -269,17 +269,5 @@
             />
 
     </LinearLayout>
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_bottom"
-        android:layout_weight="0.5"
-        android:background="#000000"
-        >
-    </com.google.android.gms.ads.AdView>
 </LinearLayout>
 
