Code not working. Deleted old math library. Prepared to include MathView and other stuff

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
     <fragment
         android:id="@+id/topFragment"
-        class="tudor.com.calculatorSleek.fragments.TopFragment"
+        class="tudor.com.calculatorSleek.main.TopFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="top"
